Front Page: Set `max-width` on headings to avoid overflow.

--- a/source/wp-content/themes/wporg-news-2021/sass/page/front-page/_latest-posts.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/page/front-page/_latest-posts.scss
@@ -14,6 +14,7 @@ body.news-front-page .front__latest-posts {
 		margin-bottom: var(--wp--custom--alignment--edge-spacing);
 		padding: var(--wp--custom--alignment--edge-spacing) 0;
 		width: calc(var(--wp--custom--layout--content-meta-size) - 32px);
+		max-width: 100%;
 
 		@include break-medium() {
 			min-width: calc(var(--wp--custom--layout--content-meta-size) - 32px);
